5.3.9 -> 5.3.10
    - jbj: fix: reduce false positives checking for 
      duplicate keys (mdvbz#62822).
    - jbj: uuid: permit --qf '%{RPMTAG:uuid}' UUIDv1/UUIDv5 output display.
    - jbj: uuid: rework for single exit return.
    - devzero2000: permit in configure phase to enable the 
      --enable-rpm-lua-extensions-based-on-rpmlib used by OpenPKG today
      and, for rpm.vercmp, by rpm.org (ref https://blueprints.launchpad.net/rpm/+spec/rpm-split-vendor-config-in-autofu)
    - proyvind: always run %clean so it won't be required in .spec file.
    - jbj: checksig: check explictly for per-item failures after iterating.
    - jbj: install: check explictly for per-item failures after iterating.
    - jbj: rpmgi: save per-item failures separately from iteration returns.
    - jbj: display the exit code when -vv is used.
    - devzero2000: document the actual semantic of rpm5 %exclude
    - proyvind: rubygems.rb: change dependency 'ruby >= ruby_version' to
	'ruby(abi) = ruby_version'
    - devzero2000: flip a toy test from the %exclude and check unpackaged file issue
    - proyvind: check whether provides are duplicate of package first (without
	distepoch), also ensures that package is always at end of %provideversion.
    - jbj: add "| cpio -dim" to the rpm2cpio.8 examples.
    - mdawkins: tagged 5.3.9 release in configure.ac

5.3.8 -> 5.3.9:
    - mdawkins: updated changelog information for snapshot releases in rpm.spec, rpm.spec.in
    - mdawkins : i18n update sl.po sv.po
    - jbj: i18n: update fi.po files (Translation Project).
    - devzero2000: permit in configure phase to enable the
      optional-dirname-and-symlink-deps used by Mandriva and Ark today
      (ref https://blueprints.launchpad.net/rpm/+spec/rpm-split-vendor-config-in-autofu)
    - proyvind: use expanded %{___NVRA} for 'rpm --last'.
    - devzero2000: merge Suse patch. Set "%_specfile" macro in the build so that people can 
	do specfile manipulation/data extraction in the build.