@@ -865,7 +865,11 @@ package or when debugging this package.\
 %_localedir		%{_datarootdir}/locale
 %_lispdir		%{_datarootdir}/emacs/site-lisp
 
-%_initrddir		%{_sysconfdir}/rc.d/init.d
+%_initddir              %{_sysconfdir}/rc.d/init.d
+# This is a deprecated misspelling, present for backwards compatibility.
+# %_initrddir             %{_initddir}
+%_initrddir             %{_initddir}
+
 
 #---------------------------------------------------------------------
 #   Multilibs
